# NACHOS--Not-Another-Completely-Heuristic-Operating-System

./: README.md
NACHOS 1/code/: Makefile.common
NACHOS 1/code/filesys/: Makefile  nachos
NACHOS 1/code/network/: Makefile  nachos
NACHOS 1/code/threads/: Makefile  consumer.cc  main.cc  nachos  synch.h
NACHOS 1/code/userprog/: Makefile  nachos
NACHOS 1/code/vm/: Makefile  nachos
NACHOS 2/code/: CMakeLists.txt
NACHOS 2/code/filesys/: Makefile  nachos
NACHOS 2/code/network/: Makefile  nachos
NACHOS 2/code/test/: Makefile  echo1.coff  shell.c
NACHOS 2/code/threads/: Makefile  main.cc  nachos  producer.cc  producer.h  synch.cc  system.cc  system.h
NACHOS 2/code/userprog/: Makefile  SynchConsole.cc  a.txt  addrspace.cc  addrspace.h  exception.cc  memoryManager.cc  memoryManager.h  nachos  progtest.cc
NACHOS 2/code/vm/: Makefile  nachos
NACHOS 3/code/: CMakeLists.txt  Makefile  Makefile.common
NACHOS 3/code/filesys/: Makefile  filehdr.cc  filesys.cc  filesys.h  nachos  synchdisk.cc  synchdisk.h
NACHOS 3/code/machine/: disk.cc  disk.h  mipssim.cc  stats.h  translate.cc  translate.h
NACHOS 3/code/network/: Makefile  nachos
NACHOS 3/code/test/: Makefile  array.c  exectest  exectest.c  exectest.coff  matmult  matmult.c  matmult.coff  shell  shell.c  shell.coff  start.c
NACHOS 3/code/threads/: consumer.h  nachos  system.cc  system.h  threadtest.cc
NACHOS 3/code/userprog/: DISK  Makefile  SynchConsole.cc  SynchConsole.h  Table.cc  Table.h  addrspace.cc  addrspace.h  exception.cc  memoryManager.cc  memoryManager.h  nachos  progtest.cc
NACHOS 3/code/vm/: Makefile  nachos
